--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,6 +5,7 @@ events {
 }
 
 http {
+  include /etc/nginx/mime.types;
   include /etc/nginx/conf.d/*.conf;
 
   server {
@@ -23,6 +24,10 @@ http {
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /static/ {
+      alias /usr/share/nginx/html;
     }
   }
 }
