--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,8 @@ services:
     envVars:
       - key: PORT
         value: 8000
+      - key: GOOGLE_MAPS_API_KEY
+        value: your_google_maps_api_key
     autoDeploy: true
     plan: free
 
@@ -16,9 +18,7 @@ services:
     repo: https://github.com/your-user/your-repo
     dockerfilePath: frontend/Dockerfile
     envVars:
-      - key: REACT_APP_BACKEND_URL
-        value: https://meelette-backend.onrender.com  # バックエンドのURLを指定
-    dependsOn:
-      - backend
+      - key: REACT_APP_API_URL
+        value: https://backend.onrender.com  # バックエンドのURL
     autoDeploy: true
     plan: free
