--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: backend
     env: docker
-    repo: https://github.com/your-user/your-repo
+    repo: https://github.com/ru-se/Meelette
     dockerfilePath: backend/Dockerfile
     envVars:
       - key: PORT
@@ -15,7 +15,7 @@ services:
   - type: web
     name: frontend
     env: docker
-    repo: https://github.com/your-user/your-repo
+    repo: https://github.com/ru-se/Meelette
     dockerfilePath: frontend/Dockerfile
     envVars:
       - key: REACT_APP_API_URL
