--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -19,12 +19,12 @@ http {
     }
 
     location /api/ {
-      proxy_pass http://backend:8000/;
+      proxy_pass https://meelette-backend.onrender.com/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    }z
 
     location /static/ {
       alias /usr/share/nginx/html;
