--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -24,7 +24,7 @@ COPY nginx.conf /etc/nginx/nginx.conf
 COPY ./frontend/nginx.conf /etc/nginx/nginx.conf
 
 # frontendディレクトリ内のビルド済みアプリケーションをnginxのhtmlディレクトリにコピー
-COPY ./frontend/build /usr/share/nginx/html
+# COPY ./frontend/build /usr/share/nginx/html
 
 # `conf.d/` ディレクトリに `default.conf` を作成
 RUN echo 'server { listen 80; server_name localhost; location / { root /usr/share/nginx/html; index index.html index.htm; try_files $uri $uri/ /index.html; } }' > /etc/nginx/conf.d/default.conf
